0027426: FSD_BinaryFile: Assignment to a temporary handle variable

A reference is added to the returning object of the method Storage_InternalData::ReadArray().
Modified files:
- Storage_InternalData.hxx

OCCT: CR27426
Products: nothing